<resources>
    <string name="app_name">Online Shopping</string>
    <string name="product_activity">Product Page</string>
    <string name="icon">Icon</string>
    <string name="price">Price</string>
    <string name="product_title">Product Title</string>
    <string name="product_image">Product Image</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="cart_add">Add to Cart</string>
    <string name="cart_button">Cart Button</string>
    <string name="vendor_login">VENDOR LOGIN</string>
    <string name="customer_login">CUSTOMER LOGIN</string>
    <string name="marche">marché</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="email_id">Email Id</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="security_pin">Security PIN</string>
    <string name="repeat_pin">Repeat PIN</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="submit_card_details">SUBMIT CARD DETAILS</string>
    <string name="pay">PAY</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="cancel">Cancel</string>
    <string name="super_secure_payment_gateway">SUPER SECURE PAYMENT GATEWAY</string>
    <string name="amount">Amount</string>
    <string name="update_quantity">UPDATE QUANTITY</string>
    <string name="delete_product">DELETE PRODUCT</string>
    <string name="categories">Categories</string>
    <string name="clothing">Clothing</string>
    <string name="books">Books</string>
    <string name="appliances">Appliances</string>
    <string name="electronics">Electronics</string>
    <string name="furniture">Furniture</string>
    <string name="food">Food</string>
    <string name="title">Title</string>
    <string name="size">Size</string>
    <string name="item_name">Item Name</string>
    <string name="item_category">Item Category</string>
    <string name="item_price">Item Price</string>
    <string name="remove">REMOVE</string>
    <string name="cart">Cart</string>
    <string name="logout">Logout</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="quantity">Quantity</string>
    <string name="product_name">Product Name</string>
</resources>
