<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_cart_item_layout"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:layout_marginRight="5dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="2dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true"
    android:layout_marginTop="5dp"
    app:contentPaddingLeft="5dp"
    app:contentPaddingRight="5dp"
    android:focusable="true"
    android:layout_marginEnd="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_item_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#2d2d2d"
            android:scaleType="centerCrop"
            android:contentDescription="@string/icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#FFCA28"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:layout_weight="1"
                android:text="@string/item_name"
                android:textColor="#2d2d2d"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_item_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="7dp"
                android:text="@string/item_category"
                android:textColor="#2d2d2d"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="7dp"
                android:text="@string/price"
                android:textColor="#2d2d2d"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_item_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="7dp"
                android:text="@string/quantity"
                android:textColor="#2d2d2d"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btn_remove_from_cart"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/remove"
                android:clickable="true"
                android:layout_marginStart="4dp"
                android:focusable="true" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>