<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/background_light"
    tools:context="com.example.aayush.onlineshopping.WelcomeScreen">

    <Button
        android:id="@+id/buttonCW"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="128dp"
        android:layout_height="87dp"
        android:layout_marginBottom="104dp"
        android:onClick="customerClick"
        android:text="@string/customer_login"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonVW"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonVW"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="73dp"
        android:background="@android:color/background_light"
        android:onClick="vendorClick"
        android:text="@string/vendor_login"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonCW"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCW" />

    <ImageButton
        android:id="@+id/welcomeImage"
        android:layout_width="190dp"
        android:layout_height="182dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/welcomeTitle"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379"
        app:srcCompat="@drawable/app_icon" />

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="242dp"
        android:layout_height="88dp"
        android:layout_marginBottom="8dp"
        android:text="@string/marche"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507" />

</android.support.constraint.ConstraintLayout>
